# memosift

./: .gitignore  ACHIEVEMENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE_REVIEW.md  COMPETITIVE_ANALYSIS_2026.md  CONTRIBUTING.md  LICENSE  README.md  about.md  biome.json  pytest.ini  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mcp-server/src/: index.ts  server.ts  session-manager.ts
python/: pyproject.toml
python/src/memosift/: __init__.py  config.py  detect.py  report.py  session.py  stream.py
python/src/memosift/adapters/: __init__.py  anthropic_sdk.py  claude_agent_sdk.py  google_adk.py  langchain.py  openai_sdk.py  vercel_ai.py
python/src/memosift/core/: __init__.py  agentic_patterns.py  anchor_extractor.py  auto_tuner.py  budget.py  classifier.py  coalescer.py  context_window.py  deduplicator.py  feedback.py  llm_inspector.py  phase_detector.py  pipeline.py  positioner.py  resolution_tracker.py  scorer.py  state.py  types.py
python/src/memosift/core/engines/: __init__.py  discourse_compressor.py  importance.py  pruner.py  relevance_pruner.py  structural.py  summarizer.py  verbatim.py
python/src/memosift/providers/: __init__.py  base.py  heuristic.py
scripts/: publish.sh
spec/: memosift-config.schema.json  memosift-message.schema.json  validate_vectors.py
spec/test-vectors/: classify-001.json  compress-001.json  dedup-001.json
tests/: TEST_GUIDE.md
tests/mcp-server/: sdk-parity.test.ts  tools.test.ts
tests/python/: conftest.py  test_adapter_roundtrip.py  test_adapters.py  test_agentic_patterns.py  test_anchor_ledger.py  test_budget.py  test_budget_enforcement.py  test_classifier.py  test_context_window.py  test_deduplicator.py  test_detect.py  test_engine_pruner.py  test_engine_structural.py  test_engine_summarizer.py  test_engine_verbatim.py  test_incremental.py  test_metric_intelligence.py  test_performance_tiers.py  test_pipeline.py  test_positioner.py  test_production_benchmarks.py  test_scorer.py  test_session.py  test_smoke.py  test_sprint1_improvements.py  test_sprint2_improvements.py  test_sprint3_improvements.py  test_stream.py  test_three_zone.py  test_vercel_adapter.py
tests/typescript/: context-window.test.ts  detect.test.ts  incremental.test.ts  l0-adaptive.test.ts  memosift.test.ts  session.test.ts  (+2 more)
typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+44 files in other folders)
